--- a/notebooks/VQGAN/vqgan_data_exploration.ipynb
+++ b/notebooks/VQGAN/vqgan_data_exploration.ipynb
@@ -364,7 +364,7 @@
     "    # once in a while print some stats\n",
     "    if epoch % eval_interval == 0 or epoch == (max_epochs - 1):\n",
     "        losses = estimate_loss()\n",
-    "        print(f\"step {epoch}: train loss: {losses['train']:.4f}, val loss: {losses['val']:.4f}\")\n",
+    "        print(f\"step {epoch}: train loss: {losses['train']:.4f}, test loss: {losses['test']:.4f}\")\n",
     "    \n",
     "    # sample training\n",
     "\n"
